--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button type="button" data-button="button" data-translate="-" ><i class="fas fa-minus"></i></button>
                 <button type="button" data-button="button" data-translate="+" ><i class="fas fa-plus"></i></button>
                 <button type="button" data-button="button" data-translate="%" ><i class="fas fa-percentage"></i></button>
-                <button type="button" data-button="button" data-translate="clean">C</button>
+                <button type="button"><a href="#">C</a></button>
             </div>
             <div class="clavier" id="clavier">
                 <div class="touche" data-button="touch" data-translate="9">9</div>
@@ -31,7 +31,7 @@
                 <div class="touche" data-button="touch" data-translate="2">2</div>
                 <div class="touche" data-button="touch" data-translate="1">1</div>
                 <div class="touche equal" data-button="equal" data-translate="="><i class="fas fa-equals"></i></div>
-                <div class="touche" data-button="touch" data-translate=",">.</div>                
+                <div class="touche" data-button="touch" data-translate=".">.</div>                
                 <div class="touche" data-button="touch" data-translate="0">0</div>                
             </div>
         </div>
