--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
                 <button type="button" data-button="button" data-translate="*" ><i class="fas fa-times"></i></button>
                 <button type="button" data-button="button" data-translate="-" ><i class="fas fa-minus"></i></button>
                 <button type="button" data-button="button" data-translate="+" ><i class="fas fa-plus"></i></button>
-                <button type="button" data-button="button" data-translate="%" ><i class="fas fa-percentage"></i></button>
-                <button type="button"><a href="#">C</a></button>
+                <button type="button" data-button="button" data-translate="%" >mod</button>
+                <button type="button" data-button="delete">CE</button>
+                <button type="button" data-button="deleteall">C</button>
             </div>
             <div class="clavier" id="clavier">
-                <div class="touche" data-button="touch" data-translate="9">9</div>
-                <div class="touche" data-button="touch" data-translate="8">8</div>
-                <div class="touche" data-button="touch" data-translate="7">7</div>
-                <div class="touche" data-button="touch" data-translate="6">6</div>
-                <div class="touche" data-button="touch" data-translate="5">5</div>
-                <div class="touche" data-button="touch" data-translate="4">4</div>
-                <div class="touche" data-button="touch" data-translate="3">3</div>
-                <div class="touche" data-button="touch" data-translate="2">2</div>
-                <div class="touche" data-button="touch" data-translate="1">1</div>
-                <div class="touche equal" data-button="equal" data-translate="="><i class="fas fa-equals"></i></div>
-                <div class="touche" data-button="touch" data-translate=".">.</div>                
-                <div class="touche" data-button="touch" data-translate="0">0</div>                
+                <button type="button" class="touche" data-button="touch" data-translate="9">9</button>
+                <button type="button" class="touche" data-button="touch" data-translate="8">8</button>
+                <button type="button" class="touche" data-button="touch" data-translate="7">7</button>
+                <button type="button" class="touche" data-button="touch" data-translate="6">6</button>
+                <button type="button" class="touche" data-button="touch" data-translate="5">5</button>
+                <button type="button" class="touche" data-button="touch" data-translate="4">4</button>
+                <button type="button" class="touche" data-button="touch" data-translate="3">3</button>
+                <button type="button" class="touche" data-button="touch" data-translate="2">2</button>
+                <button type="button" class="touche" data-button="touch" data-translate="1">1</button>
+                <button type="button" class="touche" data-button="equal" data-translate="="><i class="fas fa-equals"></i></button>
+                <button type="button" class="touche" data-button="touch" data-translate=".">.</button>                
+                <button type="button" class="touche" data-button="touch" data-translate="0">0</button>                
             </div>
         </div>
     </div>
